--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
+    - run: echo ${{ secrets.GITHUB_TOKEN }} >> access_token.txt
     - uses: actions/setup-go@v1
       with:
         go-version: "1.13"
@@ -17,11 +18,10 @@ jobs:
       env:
         GITHUB_USER: "mingrammer"
         GITHUB_EMAIL: "mingrammer@gmail.com"
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git config user.name "${GITHUB_USER}"
         git config user.email "${GITHUB_EMAIL}"
-        git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+        git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git
         git commit -am "Auto update"
         git push origin master
         
